opam-version: "2.0"
synopsis: "Rocq formalization of the Promising Semantics"
maintainer: ["yeji.han@sf.snu.ac.kr"]
authors: [
  "Jeehoon Kang"
  "Chung-Kil Hur"
  "Ori Lahav"
  "Viktor Vafeiadis"
  "Derek Dreyer"
]
license: "MIT"
homepage: "https://github.com/snu-sf/promising-coq"
bug-reports: "https://github.com/snu-sf/promising-coq/issues"
dev-repo: "git+https://github.com/snu-sf/promising-coq.git"
depends: [
  "coq-core" {>= "9.0"}
  "rocq-stdlib"
  "coq-sflib" {>= "2.1.0"}
  "coq-paco" {>= "4.2.3"}
  "coq-promising-lib" {>= "2.1.0"}
  "dune" {>= "3.21"}
]
pin-depends: [
  ["coq-promising-lib.2.1.0"
   "git+https://github.com/snu-sf/promising-lib.git#2.1.0"]
]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs "@install"]
]
